syntax = "proto3";
package model;

import "google/protobuf/timestamp.proto";

option go_package = ".;model";

enum ChatType {
  DIALOG = 0;
  GROUP = 1;
}

enum ContentType {
  TEXT = 0;
  IMAGE = 1;
}

message MessageCreate {
  int64 chat_id = 1;
  ChatType chat_type = 2;
  string content = 3;
}

message Message {
  int64 id = 1;
  int64 chat_id = 2;
  ChatType chat_type = 3;
  int64 sender_id = 4;
  string content = 5;
  ContentType content_type = 6;
  bool is_service = 7;
  google.protobuf.Timestamp sent_at = 8;
  optional google.protobuf.Timestamp delivered = 9;
}